07_retirement/grade.txt
Grading at Sun Aug 23 19:03:19 UTC 2020
Attempting to compile retirement.c
retirement.c: In function ‘main’:
retirement.c:40:17: error: ‘retire_info {aka struct _retire_info}’ has no member named ‘month’
   while (working.month>0){
                 ^
retirement.c:46:12: error: ‘retire_info {aka struct _retire_info}’ has no member named ‘monthss’
     working.monthss--;
            ^
The code did not compile!

Overall Grade: F
